# DDGC_newArch

./: .gitignore  Cargo.toml  ENCOUNTER_RUNTIME_FIDELITY_INVENTORY.md  HERO_CLASS_FAMILIES.md  MIGRATION_BLOCKERS.md  MIGRATION_MAP.md  MONSTER_FAMILIES.md  PHASE2_CONDITION_HITPOLICY_INVENTORY.md  README.md  SEMANTIC_GAPS.md  SEMANTIC_GAP_MATRIX.md  SEMANTIC_PARITY.md
.state/: decisions.jsonl  runs.jsonl  tasks.json  tasks.json.bak.repo-path-reset  tasks.json.bak.reset-intermediate-to-ready  tasks.json.bak.unblock-all-to-ready
data/: Buildings.json  Curios.csv  JsonCamping.json  JsonQuirks.json  JsonTraits.json  JsonTrinkets.json  Obstacles.json  Quests.json  Traps.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: cli.rs  lib.rs  main.rs  trace.rs
tasks/: .last-branch.prd-post-merge-runtime-quality-followup.json  adapter_api_drift_inventory.md  api_drift_repair_closeout.md  phase2_condition_hit_policy_inventory.md  prd-hero-monster-skill-status-semantic-parity.md  prd-phase4-condition-damage-dungeon.md  prd-phase5-town-curio-trinket.md  prd-phase5.json  prd-post-merge-runtime-quality-followup.json  prd-semantic-gap-phase-1.json  prd-semantic-gap-phase-2.json  prd.json  prd.progress.txt  progress.txt  skills-inventory-audit.md  task-camping-system.md  task-sanitarium-town-services.md  tests_api_drift_inventory.md
tests/: buff_loot_registry.rs  build_run_smoke.rs  building_detail_surface_tests.rs  building_registry.rs  camp_effect_regression.rs  campaign_snapshot.rs  campaign_state_transitions.rs  (+46 more)
(+194 files in other folders)
